syntax = "proto3";

// 结算
import "google/api/annotations.proto";

package api.payment.v1;

option go_package = "payment/api/payment/v1;v1";
option java_multiple_files = true;
option java_package = "api.payment.v1";

service PaymentService {
	rpc Charge(ChargeReq) returns (ChargeResp) {
		option (google.api.http) = {
			post: "/v1/payment",
			body: "*"
		};
	}
}

message CreditCardInfo {
	string credit_card_number = 1;
	int32 credit_card_cvv = 2;
	int32 credit_card_expiration_year = 3;
	int32 credit_card_expiration_month = 4;
}

message ChargeReq {
	float amount = 1;
	CreditCardInfo credit_card = 2;
	string order_id = 3;
	uint32 user_id = 4;
}

message ChargeResp {
	string transaction_id = 1;
}
